# forgeledger-test

./: .env.example  .gitignore  README.md  boot.ps1  forge.json  pyproject.toml  pytest.ini  requirements.txt
Forge/Contracts/: blueprint.md  boundaries.json  builder_directive.md  manifesto.md  phases.md  physics.yaml  schema.md  stack.md  ui.md
backend/: alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  health.py
backend/app/repositories/: __init__.py
backend/app/routers/: __init__.py  health.py
frontend/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
tests/: __init__.py  conftest.py  test_health.py
